<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FirstParadeTab"
    android:padding="8dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/platoon_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        android:layout_margin="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/platoon_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/platoon_3">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/platoon_1_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/platoon_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        android:layout_margin="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/platoon_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/platoon_4">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/platoon_2_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/platoon_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        android:layout_margin="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/platoon_1"
        app:layout_constraintRight_toLeftOf="@id/platoon_4"
        app:layout_constraintBottom_toTopOf="@id/coy_hq">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/platoon_3_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/platoon_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="12dp"
        android:layout_margin="8dp"
        app:cardElevation="4dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/platoon_2"
        app:layout_constraintLeft_toRightOf="@id/platoon_3"
        app:layout_constraintBottom_toTopOf="@id/generate_coy_parade_state">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/platoon_4_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/coy_hq"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        android:layout_margin="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/platoon_3"
        app:layout_constraintRight_toLeftOf="@id/generate_coy_parade_state">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/platoon_5_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/generate_coy_parade_state"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        android:layout_margin="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/coy_hq"
        app:layout_constraintTop_toBottomOf="@id/platoon_4"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate_coy_parade_state_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"/>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>